# SpeechMaestro

./: main.py  pyproject.toml  replit.nix
static/css/: styles.css
static/js/: app.js
templates/: index.html
utils/: speech_evaluator.py  topic_generator.py
